--- a/Project-1/Group/views/add-incident.ejs
+++ b/Project-1/Group/views/add-incident.ejs
@@ -2,19 +2,38 @@
 
   <main id="site-main">
     <div class="container">
-        <div class="box-nav d-flex justify-between">
-           <div class="filter">
-               <a href="/"><i class="fas fa-angle-double-left"></i> Incidents</a>
-           </div>
+        <div class="row">
+        <div class ="col-md-offset-3 col-md-6">
+        <title><%= title %></title>
+        <br>
+        <!--Table creation + row headings-->
+        <table class = "table table-bordered table-hover table-striped-columns table-success">
+        <tr>
+        <th class="text-center">Name</th>
+        <th class="text-center">Email</th>
+        <th class="text-center">Incident Number</th>
+        <th class="text-center">Employee ID</th>
+        <th class="text-center">Location</th>
+        <th class="text-center">Description</th>
+        <th class="text-center">Status</th>
+        <th class="text-center">Edit</th>
+        <th class="text-center">Delete</th>
+        </tr>
+        <!--For loop iterating for each entry within the database-->
+        <% for(let count=0; count<incident.length; count++){ %>
+          <tr>
+          <td class="text-center"><%= incident[count].name %></td>
+          <td class="text-center"><%= incident[count].email %></td>
+          <td class="text-center"><%= incident[count].incidentnumber %></td>
+          <td class="text-center"><%= incident[count].employeeID %></td>
+          <td class="text-center"><%= incident[count].location %></td>
+          <td class="text-center"><%= incident[count].description %></td>
+          <td class="text-center"><%= incident[count].status %></td>
+          </tr>
+        <%}%>
+        </table>
         </div>
-        <div class="form-title text-center">
-            <h2 class="text">New Incident</h2>
-            <span class="text">Creat New Incident Report</span>
         </div>
-
-        <%- include('include/form') %>
-       
     </div>
-
     <% include partials/bottomNav.ejs %>
     <% include partials/footer.ejs %>
