--- a/Project-1/Group/views/add-incident.ejs
+++ b/Project-1/Group/views/add-incident.ejs
@@ -29,6 +29,14 @@
           <td class="text-center"><%= incident[count].location %></td>
           <td class="text-center"><%= incident[count].description %></td>
           <td class="text-center"><%= incident[count].status %></td>
+          <td class=”text-center col-1”>
+            <a href=”/incident/edit/<%=  incident[count]._id %>”
+		          <class=”btn btn-primary”>Edit </a>
+          </td>
+          <td class=”text-center col-1”>
+            <a href=”/incident/edit/<%=  incident[count]._id %>”
+		          <class=”btn btn-primary”>Edit </a>
+          </td>
           </tr>
         <%}%>
         </table>
